plugins {
    id "io.freefair.lombok" version "9.0.0"
    id "com.vanniktech.maven.publish" version "0.34.0"
    id "com.github.ben-manes.versions" version "0.53.0"
}

apply plugin: "java-library"
apply plugin: "jacoco"

group = "nl.colorize"
version = "2025.3"
compileJava.options.encoding = "UTF-8"

ext.libgdxVersion = "1.13.5"
ext.teavmVersion = "0.13.0-dev-5"
ext.jfxVersion = "21.0.2"

java {
    sourceCompatibility = "21"
    targetCompatibility = "21"
    sourceSets.main.java.srcDirs = ["source"]
    sourceSets.main.resources.srcDirs = ["resources"]
    sourceSets.test.java.srcDirs = ["test"]
}

repositories {
    mavenCentral()
    maven {
        url = "https://jitpack.io"
    }
    maven {
        url = "https://teavm.org/maven/repository"
    }
}

dependencies {
    implementation "nl.colorize:colorize-java-commons:2025.3"

    implementation "org.openjfx:javafx-base:${jfxVersion}"
    implementation "org.openjfx:javafx-base:${jfxVersion}:mac-aarch64"
    implementation "org.openjfx:javafx-base:${jfxVersion}:win"
    implementation "org.openjfx:javafx-graphics:${jfxVersion}"
    implementation "org.openjfx:javafx-graphics:${jfxVersion}:mac-aarch64"
    implementation "org.openjfx:javafx-graphics:${jfxVersion}:win"
    implementation "org.openjfx:javafx-media:${jfxVersion}"
    implementation "org.openjfx:javafx-media:${jfxVersion}:mac-aarch64"
    implementation "org.openjfx:javafx-media:${jfxVersion}:win"

    implementation "com.badlogicgames.gdx:gdx:${libgdxVersion}"
    implementation "com.badlogicgames.gdx:gdx-platform:${libgdxVersion}:natives-desktop"
    implementation "com.badlogicgames.gdx:gdx-backend-lwjgl3:${libgdxVersion}"
    implementation "com.badlogicgames.gdx:gdx-freetype:${libgdxVersion}"
    implementation "com.badlogicgames.gdx:gdx-freetype-platform:${libgdxVersion}:natives-desktop"
    implementation("com.badlogicgames.gdx:gdx-tools:${libgdxVersion}") {
        exclude group: "org.lwjgl.lwjgl"
    }

    implementation "org.teavm:teavm-jso:${teavmVersion}"
    implementation "org.teavm:teavm-jso-apis:${teavmVersion}"
    implementation "org.teavm:teavm-classlib:${teavmVersion}"
    implementation "org.teavm:teavm-tooling:${teavmVersion}"

    implementation "com.github.mgsx-dev.gdx-gltf:gltf:2.2.1"
    implementation "com.tagtraum:casampledsp-complete:0.9.32"

    testImplementation "org.junit.jupiter:junit-jupiter:6.0.0"
    testImplementation "com.tngtech.archunit:archunit-junit5:1.4.1"
    testImplementation "org.slf4j:slf4j-jdk14:2.0.9"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

javadoc {
    exclude "**/java2d/**", "**/libgdx/**", "**/jfx/**", "**/teavm/**", "**/headless/**"
}

test {
    useJUnitPlatform()
}

jacocoTestReport {
    afterEvaluate {
        classDirectories.from = files(classDirectories.files.collect {
            fileTree(dir: it, exclude: ["**/renderer/*/*", "**/*demo*"])
        })
    }
}

task coverage(dependsOn: ["test", "jacocoTestReport"]) {
    doLast {
        def report = file("${buildDir}/reports/jacoco/test/html/index.html").text
        def coverage = report =~ "tfoot.*?ctr2.*?>([\\d.]+%).*?tfoot"
        println "-" * 40
        println "Test coverage: " + coverage[0][1]
    }
}

task transpileDemoApplication2D(type: JavaExec, dependsOn: jar) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = "nl.colorize.multimedialib.tool.TeaVMTranspilerTool"
    args "--project", "MultimediaLib-TeaVM-Demo2D",
         "--resources", "resources",
         "--out", "${buildDir}/browserdemo2d",
         "--main", "nl.colorize.multimedialib.tool.TeaDemoLauncher",
         "--meta", "demo:2d"
}

task transpileDemoApplication3D(type: JavaExec, dependsOn: jar) {
    classpath = sourceSets.main.runtimeClasspath
    mainClass = "nl.colorize.multimedialib.tool.TeaVMTranspilerTool"
    args "--project", "MultimediaLib-TeaVM-Demo3D",
         "--resources", "resources",
         "--out", "${buildDir}/browserdemo3d",
         "--main", "nl.colorize.multimedialib.tool.TeaDemoLauncher",
         "--meta", "demo:3d"
}

mavenPublishing {
    coordinates("nl.colorize", "multimedialib", version)
    
    pom {
        name = "MultimediaLib"
        description = "Build multimedia applications that support desktop, mobile, and web."
        url = "https://www.clrz.nl"
        inceptionYear = "2009"
        licenses {
            license {
                name = "The Apache License, Version 2.0"
                url = "http://www.apache.org/licenses/LICENSE-2.0.txt"
                distribution = "http://www.apache.org/licenses/LICENSE-2.0.txt"
            }
            developers {
                developer {
                    id = "colorize"
                    name = "Colorize"
                    url = "https://clrz.nl"
                }
            }
            scm {
                url = "https://github.com/colorizenl/multimedialib"
                connection = "scm:git:https://github.com/colorizenl/multimedialib.git"
                developerConnection = "scm:git:https://github.com/colorizenl/multimedialib.git"
            }
        }
    }
}
